<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;
use Illuminate\Database\Eloquent\Relations\HasMany;
use Illuminate\Database\Eloquent\SoftDeletes;

class Medecin extends Model
{
    use SoftDeletes;

    protected $fillable = [
        'user_id',
        'departement_id',
        'numero_ordre',
        'specialite',
        'grade',
        'diplomes',
        'diplomes_liste',
        'disponibilites',
        'tarif_consultation',
        'duree_consultation',
        'bio',
        'annees_experience',
        'etablissements_precedents',
        'signature_electronique',
        'langues',
        'type_contrat',
    ];

    protected $casts = [
        'disponibilites' => 'array',
        'diplomes_liste' => 'array',
        'etablissements_precedents' => 'array',
        'langues' => 'array',
        'tarif_consultation' => 'decimal:2',
    ];

    public function user(): BelongsTo
    {
        return $this->belongsTo(User::class);
    }

    public function departement(): BelongsTo
    {
        return $this->belongsTo(Departement::class);
    }

    public function rendezVous(): HasMany
    {
        return $this->hasMany(RendezVous::class);
    }
}
